--- a/projeto loja de roupas/index.html
+++ b/projeto loja de roupas/index.html
@@ -23,43 +23,44 @@
         <p id="subtitulo">Camisetas</p>
         <div class="rolo-de-produtos">
             <div id="produto">
-                <img src="assets/img/Üsual.jpg">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p><p id="preco">R$120,00</p>
+                <img src="assets/img/camiseta preta.jpg">
+                <p>Camiseta preta básica</p><p id="preco">R$120,00</p>
             </div>
             <div id="produto">
-                <img src="assets/img/Üsual.jpg">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p><p id="preco">R$120,00</p>
+                <img src="assets/img/camiseta branca.jpg">
+                <p>Camiseta branca básica</p><p id="preco">R$120,00</p>
             </div>
             <div id="produto">
-                <img src="assets/img/Üsual.jpg">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p><p id="preco">R$120,00</p>
+                <img src="assets/img/camiseta off-white.jpg">
+                <p>Camiseta off-white básica</p><p id="preco">R$120,00</p>
             </div>
             <div id="produto">
-                <img src="assets/img/Üsual.jpg">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p><p id="preco">R$120,00</p>
+                <img src="assets/img/camiseta beje.jpg">
+                <p>Camiseta beje básica</p><p id="preco">R$120,00</p>
             </div>
             <div id="produto">
-                <img src="assets/img/Üsual.jpg">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p><p id="preco">R$120,00</p>
+                <img src="assets/img/camiseta marrom.jpg">
+                <p>Camiseta marrom café básica</p><p id="preco">R$120,00</p>
             </div>
             <div id="produto">
-                <img src="assets/img/Üsual.jpg">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p><p id="preco">R$120,00</p>
+                <img src="assets/img/camiseta caramelo.jpg">
+                <p>Camiseta caramelo básica</p><p id="preco">R$120,00</p>
             </div>
             <div id="produto">
-                <img src="assets/img/Üsual.jpg">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p><p id="preco">R$120,00</p>
+                <img src="assets/img/camiseta verde escuro.jpg">
+                <p>Camiseta verde musgo básica</p><p id="preco">R$120,00</p>
             </div>
             <div id="produto">
-                <img src="assets/img/Üsual.jpg">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p><p id="preco">R$120,00</p>
+                <img src="assets/img/camiseta azul marinho.jpg">
+                <p>Camiseta azul marinho básica</p><p id="preco">R$120,00</p>
             </div>
             <div id="produto">
-                <img src="assets/img/Üsual.jpg">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p><p id="preco">R$120,00</p>
-            </div><div id="produto">
-                <img src="assets/img/Üsual.jpg">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p><p id="preco">R$120,00</p>
+                <img src="assets/img/camiseta roxa.jpg">
+                <p>Camiseta berinjela básica</p><p id="preco">R$120,00</p>
+            </div>
+            <div id="produto">
+                <img src="assets/img/camiseta vermelha.jpg">
+                <p>Camiseta vermelha básica</p><p id="preco">R$120,00</p>
             </div>
 
         </div>
