--- a/projeto loja de roupas/index.html
+++ b/projeto loja de roupas/index.html
@@ -66,6 +66,34 @@
         </div>
     </section>
 
+    <section>
+        <p id="subtitulo">Shorts</p>
+        <div class="rolo-de-produtos">
+
+            <div id="produto">
+                <img src="assets/img/shorts preto.jpg">
+                <p>Shorts moletom preto</p><p id="preco">R$120,00</p>
+            </div>
+            <div id="produto">
+                <img src="assets/img/shorts marrom.jpg">
+                <p>Shorts moletm marrom café</p><p id="preco">R$120,00</p>
+            </div>
+            <div id="produto">
+                <img src="assets/img/shorts caramelo.jpg">
+                <p>Shorts moletom caramelo</p><p id="preco">R$120,00</p>
+            </div>
+            <div id="produto">
+                <img src="assets/img/shorts verde militar.jpg">
+                <p>Shorts moletom verde militar</p><p id="preco">R$120,00</p>
+            </div>
+            <div id="produto">
+                <img src="assets/img/shorts berinjela.jpg">
+                <p>Shorts moletom berinjela</p><p id="preco">R$120,00</p>
+            </div>
+        
+        </div>
+    </section>
+
 <script src="assets/js/index.js"></script>
 </body>
 </html>
