--- a/projeto loja de roupas/index.html
+++ b/projeto loja de roupas/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Üsuall</title>
 </head>
+
 <body>
     <section class="header">
         <div id="logo"><img src="assets/img/Üsual.jpg" alt="logo Üsual"></div>
@@ -24,43 +26,53 @@
         <div class="rolo-de-produtos">
             <div id="produto">
                 <img src="assets/img/camiseta preta.jpg">
-                <p>Camiseta preta básica</p><p id="preco">R$120,00</p>
+                <p>Camiseta preta básica</p>
+                <p id="preco">R$120,00</p>
             </div>
             <div id="produto">
                 <img src="assets/img/camiseta branca.jpg">
-                <p>Camiseta branca básica</p><p id="preco">R$120,00</p>
+                <p>Camiseta branca básica</p>
+                <p id="preco">R$120,00</p>
             </div>
             <div id="produto">
                 <img src="assets/img/camiseta off-white.jpg">
-                <p>Camiseta off-white básica</p><p id="preco">R$120,00</p>
+                <p>Camiseta off-white básica</p>
+                <p id="preco">R$120,00</p>
             </div>
             <div id="produto">
                 <img src="assets/img/camiseta beje.jpg">
-                <p>Camiseta beje básica</p><p id="preco">R$120,00</p>
+                <p>Camiseta beje básica</p>
+                <p id="preco">R$120,00</p>
             </div>
             <div id="produto">
                 <img src="assets/img/camiseta marrom.jpg">
-                <p>Camiseta marrom café básica</p><p id="preco">R$120,00</p>
+                <p>Camiseta marrom café básica</p>
+                <p id="preco">R$120,00</p>
             </div>
             <div id="produto">
                 <img src="assets/img/camiseta caramelo.jpg">
-                <p>Camiseta caramelo básica</p><p id="preco">R$120,00</p>
+                <p>Camiseta caramelo básica</p>
+                <p id="preco">R$120,00</p>
             </div>
             <div id="produto">
                 <img src="assets/img/camiseta verde escuro.jpg">
-                <p>Camiseta verde musgo básica</p><p id="preco">R$120,00</p>
+                <p>Camiseta verde musgo básica</p>
+                <p id="preco">R$120,00</p>
             </div>
             <div id="produto">
                 <img src="assets/img/camiseta azul marinho.jpg">
-                <p>Camiseta azul marinho básica</p><p id="preco">R$120,00</p>
+                <p>Camiseta azul marinho básica</p>
+                <p id="preco">R$120,00</p>
             </div>
             <div id="produto">
                 <img src="assets/img/camiseta roxa.jpg">
-                <p>Camiseta berinjela básica</p><p id="preco">R$120,00</p>
+                <p>Camiseta berinjela básica</p>
+                <p id="preco">R$120,00</p>
             </div>
             <div id="produto">
                 <img src="assets/img/camiseta vermelha.jpg">
-                <p>Camiseta vermelha básica</p><p id="preco">R$120,00</p>
+                <p>Camiseta vermelha básica</p>
+                <p id="preco">R$120,00</p>
             </div>
 
         </div>
@@ -72,28 +84,34 @@
 
             <div id="produto">
                 <img src="assets/img/shorts preto.jpg">
-                <p>Shorts moletom preto</p><p id="preco">R$120,00</p>
+                <p>Shorts moletom preto</p>
+                <p id="preco">R$120,00</p>
             </div>
             <div id="produto">
                 <img src="assets/img/shorts marrom.jpg">
-                <p>Shorts moletm marrom café</p><p id="preco">R$120,00</p>
+                <p>Shorts moletm marrom café</p>
+                <p id="preco">R$120,00</p>
             </div>
             <div id="produto">
                 <img src="assets/img/shorts caramelo.jpg">
-                <p>Shorts moletom caramelo</p><p id="preco">R$120,00</p>
+                <p>Shorts moletom caramelo</p>
+                <p id="preco">R$120,00</p>
             </div>
             <div id="produto">
                 <img src="assets/img/shorts verde militar.jpg">
-                <p>Shorts moletom verde militar</p><p id="preco">R$120,00</p>
+                <p>Shorts moletom verde militar</p>
+                <p id="preco">R$120,00</p>
             </div>
             <div id="produto">
                 <img src="assets/img/shorts berinjela.jpg">
-                <p>Shorts moletom berinjela</p><p id="preco">R$120,00</p>
+                <p>Shorts moletom berinjela</p>
+                <p id="preco">R$120,00</p>
             </div>
-        
+
         </div>
     </section>
 
-<script src="assets/js/index.js"></script>
+    <script src="assets/js/index.js"></script>
 </body>
+
 </html>
