--- a/projeto loja de roupas/index.html
+++ b/projeto loja de roupas/index.html
@@ -110,6 +110,9 @@
 
         </div>
     </section>
+    <footer>
+        <p>produced by Guilherme Ligeski Saldanha</p>
+    </footer>
 
     <script src="assets/js/index.js"></script>
 </body>
