melhoras no site
adicionadas novas paginas;
ajuste nos cards dos produtos;
adicionado ícone para adicionar ao carrinho;

--- a/projeto loja de roupas/index.html
+++ b/projeto loja de roupas/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <section class="header">
-        <div id="logo"><img src="assets/img/Üsual.jpg" alt="logo Üsual"></div>
+        <div id="logo"><a href="index.html"><img src="assets/img/Üsual.jpg" alt="logo Üsual"></div></a>
         <nav id="lado-esquerdo">
             <ul>
-                <li><a href="/">Meu carrinho</a></li>
-                <li><a href="/">Meus cupons</a></li>
+                <li><a href="/projeto loja de roupas/meuCarrinho.html">Meu carrinho</a></li>
+                <li><a href="/projeto loja de roupas/meusCupons.html">Meus cupons</a></li>
                 <li><a href="/">Sale</a></li>
                 <li><a href="/">Minha conta</a></li>
             </ul>
@@ -28,51 +28,81 @@
                 <img src="assets/img/camiseta preta.jpg">
                 <p>Camiseta preta básica</p>
                 <p id="preco">R$120,00</p>
+                <div id="iconAdd">
+                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
+                </div>
             </div>
             <div id="produto">
                 <img src="assets/img/camiseta branca.jpg">
                 <p>Camiseta branca básica</p>
                 <p id="preco">R$120,00</p>
+                <div id="iconAdd">
+                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
+                </div>
             </div>
             <div id="produto">
                 <img src="assets/img/camiseta off-white.jpg">
                 <p>Camiseta off-white básica</p>
                 <p id="preco">R$120,00</p>
+                <div id="iconAdd">
+                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
+                </div>
             </div>
             <div id="produto">
                 <img src="assets/img/camiseta beje.jpg">
                 <p>Camiseta beje básica</p>
                 <p id="preco">R$120,00</p>
+                <div id="iconAdd">
+                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
+                </div>
             </div>
             <div id="produto">
                 <img src="assets/img/camiseta marrom.jpg">
                 <p>Camiseta marrom café básica</p>
                 <p id="preco">R$120,00</p>
+                <div id="iconAdd">
+                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
+                </div>
             </div>
             <div id="produto">
                 <img src="assets/img/camiseta caramelo.jpg">
                 <p>Camiseta caramelo básica</p>
                 <p id="preco">R$120,00</p>
+                <div id="iconAdd">
+                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
+                </div>
             </div>
             <div id="produto">
                 <img src="assets/img/camiseta verde escuro.jpg">
                 <p>Camiseta verde musgo básica</p>
                 <p id="preco">R$120,00</p>
+                <div id="iconAdd">
+                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
+                </div>
             </div>
             <div id="produto">
                 <img src="assets/img/camiseta azul marinho.jpg">
                 <p>Camiseta azul marinho básica</p>
                 <p id="preco">R$120,00</p>
+                <div id="iconAdd">
+                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
+                </div>
             </div>
             <div id="produto">
                 <img src="assets/img/camiseta roxa.jpg">
                 <p>Camiseta berinjela básica</p>
                 <p id="preco">R$120,00</p>
+                <div id="iconAdd">
+                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
+                </div>
             </div>
             <div id="produto">
                 <img src="assets/img/camiseta vermelha.jpg">
                 <p>Camiseta vermelha básica</p>
                 <p id="preco">R$120,00</p>
+                <div id="iconAdd">
+                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
+                </div>
             </div>
 
         </div>
