--- a/projeto loja de roupas/index.html
+++ b/projeto loja de roupas/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-    <h1>Ofoisdjifjsadf</h1>
     <section class="header">
         <div id="logo"><a href="index.html"><img src="assets/img/Üsual.jpg" alt="logo Üsual"></div></a>
         <nav id="lado-esquerdo">
@@ -23,7 +22,7 @@
         </nav>
     </section>
     <section>
-        <p id="subtitulo">Camisetas</p>
+        <p id="subtitulo" class="p">Camisetas</p>
         <div class="rolo-de-produtos">
             <div id="produto">
                 <img src="assets/img/camiseta preta.jpg">
@@ -109,7 +108,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="shorts">
         <p id="subtitulo">Shorts</p>
         <div class="rolo-de-produtos">
 
