--- a/projeto loja de roupas/index.html
+++ b/projeto loja de roupas/index.html
@@ -21,6 +21,7 @@
             </ul>
         </nav>
     </section>
+                <div class="headerBack"></div>
     <section>
         <p id="subtitulo" class="p">Camisetas</p>
         <div class="rolo-de-produtos">
