Começando a add funções para o site.
Começando a utilizar JavaScript para dar  funcionalidade ao site.

--- a/projeto loja de roupas/index.html
+++ b/projeto loja de roupas/index.html
@@ -23,7 +23,7 @@
     </section>
                 <div class="headerBack"></div>
     <section>
-        <p id="subtitulo" class="p">Camisetas</p>
+        <p id="subtitulo">Camisetas</p>
         <div class="rolo-de-produtos">
             <div id="produto">
                 <img src="assets/img/camiseta preta.jpg">
