--- a/projeto loja de roupas/index.html
+++ b/projeto loja de roupas/index.html
@@ -16,7 +16,6 @@
             <ul>
                 <li><a href="/projeto loja de roupas/meuCarrinho.html">Meu carrinho</a></li>
                 <li><a href="/projeto loja de roupas/meusCupons.html">Meus cupons</a></li>
-                <li><a href="/">Sale</a></li>
                 <li><a href="/">Minha conta</a></li>
             </ul>
         </nav>
@@ -24,87 +23,72 @@
     <div class="headerBack"></div>
 
     <section>
+        <div class="banner"><img src="assets/img/Camisas com tecido orgânico.jpg" alt="banner da linha de camisetas orgânicas"></div>
+    </section>
+
+    <section>
         <p id="subtitulo">Camisetas</p>
         <div class="rolo-de-produtos">
-            <div id="produto">
+            <div class="produto">
                 <img src="assets/img/camiseta preta.jpg">
                 <p>Camiseta preta básica</p>
-                <p id="preco">R$120,00</p>
-                <div id="iconAdd">
-                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
-                </div>
+                <p id="preco">R$120,00</p> 
+                <button class="comprar">Comprar</button>
+                
             </div>
-            <div id="produto">
+            <div class="produto">
                 <img src="assets/img/camiseta branca.jpg">
                 <p>Camiseta branca básica</p>
                 <p id="preco">R$120,00</p>
-                <div id="iconAdd">
-                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
-                </div>
+                <button class="comprar">Comprar</button>
             </div>
-            <div id="produto">
+            <div class="produto">
                 <img src="assets/img/camiseta off-white.jpg">
                 <p>Camiseta off-white básica</p>
                 <p id="preco">R$120,00</p>
-                <div id="iconAdd">
-                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
-                </div>
+                <button class="comprar">Comprar</button>
             </div>
-            <div id="produto">
+            <div class="produto">
                 <img src="assets/img/camiseta beje.jpg">
                 <p>Camiseta beje básica</p>
                 <p id="preco">R$120,00</p>
-                <div id="iconAdd">
-                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
-                </div>
+                <button class="comprar">Comprar</button>
             </div>
-            <div id="produto">
+            <div class="produto">
                 <img src="assets/img/camiseta marrom.jpg">
                 <p>Camiseta marrom café básica</p>
                 <p id="preco">R$120,00</p>
-                <div id="iconAdd">
-                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
-                </div>
+                <button class="comprar">Comprar</button>
             </div>
-            <div id="produto">
+            <div class="produto">
                 <img src="assets/img/camiseta caramelo.jpg">
                 <p>Camiseta caramelo básica</p>
                 <p id="preco">R$120,00</p>
-                <div id="iconAdd">
-                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
-                </div>
+                <button class="comprar">Comprar</button>
             </div>
-            <div id="produto">
+            <div class="produto">
                 <img src="assets/img/camiseta verde escuro.jpg">
                 <p>Camiseta verde musgo básica</p>
                 <p id="preco">R$120,00</p>
-                <div id="iconAdd">
-                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
-                </div>
+                <button class="comprar">Comprar</button>
             </div>
-            <div id="produto">
+            <div class="produto">
                 <img src="assets/img/camiseta azul marinho.jpg">
                 <p>Camiseta azul marinho básica</p>
                 <p id="preco">R$120,00</p>
-                <div id="iconAdd">
-                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
-                </div>
+                <button class="comprar">Comprar</button>
             </div>
-            <div id="produto">
+            <div class="produto">
                 <img src="assets/img/camiseta roxa.jpg">
                 <p>Camiseta berinjela básica</p>
                 <p id="preco">R$120,00</p>
-                <div id="iconAdd">
-                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
-                </div>
+                <button class="comprar">Comprar</button>
             </div>
-            <div id="produto">
+            <div class="produto">
                 <img src="assets/img/camiseta vermelha.jpg">
                 <p>Camiseta vermelha básica</p>
                 <p id="preco">R$120,00</p>
-                <div id="iconAdd">
-                    <img src="assets/img/icons8-adicionar-o-carrinho-de-compras-30.png">
-                </div>
+                <button class="comprar">Comprar</button>
             </div>
 
         </div>
@@ -114,30 +98,35 @@
         <p id="subtitulo">Shorts</p>
         <div class="rolo-de-produtos">
 
-            <div id="produto">
+            <div class="produto">
                 <img src="assets/img/shorts preto.jpg">
                 <p>Shorts moletom preto</p>
                 <p id="preco">R$120,00</p>
+                <button class="comprar">Comprar</button>
             </div>
-            <div id="produto">
+            <div class="produto">
                 <img src="assets/img/shorts marrom.jpg">
                 <p>Shorts moletm marrom café</p>
                 <p id="preco">R$120,00</p>
+                <button class="comprar">Comprar</button>
             </div>
-            <div id="produto">
+            <div class="produto">
                 <img src="assets/img/shorts caramelo.jpg">
                 <p>Shorts moletom caramelo</p>
                 <p id="preco">R$120,00</p>
+                <button class="comprar">Comprar</button>
             </div>
-            <div id="produto">
+            <div class="produto">
                 <img src="assets/img/shorts verde militar.jpg">
                 <p>Shorts moletom verde militar</p>
                 <p id="preco">R$120,00</p>
+                <button class="comprar">Comprar</button>
             </div>
-            <div id="produto">
+            <div class="produto">
                 <img src="assets/img/shorts berinjela.jpg">
                 <p>Shorts moletom berinjela</p>
                 <p id="preco">R$120,00</p>
+                <button class="comprar">Comprar</button>
             </div>
 
         </div>
