--- a/projeto loja de roupas/index.html
+++ b/projeto loja de roupas/index.html
@@ -133,7 +133,13 @@
     </section>
     
     <footer>
-        <p>produced by Guilherme Ligeski Saldanha</p>
+        <div id="redesSociais">
+            <ul>
+                <li><a href="https://www.instagram.com/guiligeskee_/"></a><img src="assets/img/icons8-instagram-24.png"></a></li>
+                <li><img src="assets/img/icons8-linkedin-24.png"></li>
+                <li><img src="assets/img/icons8-github-24.png"></li>
+            </ul>
+        </div>
     </footer>
 
     <script src="assets/js/index.js"></script>
